; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_out_cksum_stats.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_ip6_output.c_ip6_out_cksum_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @ip6_out_cksum_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ip6_out_cksum_stats(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %12 [
    i32 129, label %6
    i32 128, label %9
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @tcp_out6_cksum_stats(i32 %7)
  br label %13

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @udp_out6_cksum_stats(i32 %10)
  br label %13

12:                                               ; preds = %2
  br label %13

13:                                               ; preds = %12, %9, %6
  ret void
}

declare dso_local i32 @tcp_out6_cksum_stats(i32) #1

declare dso_local i32 @udp_out6_cksum_stats(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
